objects/pw_cc__CountryCompleteSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pw_cc__AlertEmail__c</fullName>
        <label>Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryCompleteEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CountryComplete Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__DisableAccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__DisableContactTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__DisableContractTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__DisableLeadTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__DisabledPages__c</fullName>
        <inlineHelpText>Names of Visualforce pages should be separated by a semicolon and a space</inlineHelpText>
        <label>Disabled Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__EnableZipStateCountryGeolocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable ZipCode/State/Country Geolocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__OnlyOperateWhenChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only standardize and validate when Country or State is changed (existing invalid values will not cause an error)</description>
        <label>Only operate when changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__QuickCompleteCountryEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickComplete Country Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__RunOnce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run trigger once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__StandardizationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standardization Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__StoreCountryValueAs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>0 - store as &quot;Name&quot;
1 - store as &quot;ISO 2-letter code&quot;
2 - store as &quot;ISO 3-letter code&quot;</inlineHelpText>
        <label>Store country value as</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateAccountOnSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Account On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateCityStateByZipCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, this setting will validate postal codes against the regular expression configured for the corresponding country.</inlineHelpText>
        <label>Validate ZIPCode Against Pattern on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateContactOnSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Contact On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateContractOnSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Contract On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateLeadOnSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Lead On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeLookupEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZIP Code Lookup Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>CountryComplete Settings</label>
</CustomObject>